# django-template

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: manage.py  wsgi.py
app/apps/profiles/: admin.py  models.py
app/apps/profiles/migrations/: 0001_initial.py
app/apps/profiles/tests/: factories.py  tests_profile_model.py
app/core/: helpers.py  mixins.py
app/settings/: common.py  prod.py
app/settings/django/: _base.py  apps.py  db.py  i18n.py  media.py  static.py
app/settings/other/: drf.py
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml  nginx.conf
docker/.env/: .env.dev.example  .env.prod.example
docker/override/: docker-compose.override-prod.yml
scripts/: entrypoint.sh
